CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - Current

build loop
======================

ClearCaseBaselinePublisher:
----------------------
* New publisher for use with ClearCase UCM (CC-414). Submitted by Kevin Lee.

CruiseControlControllerAgent:
----------------------
* Look for an existing MBeanServer before creating a new one. This will make it possible to manage CC through Java 5's JConsole (CC-417). Patch by Gavin Kinghall Were.

LDAPMapper:
----------------------
* Email mapper that uses an LDAP lookup to determine user email addresses (CC-413). Submitted by Esa Laine.

reporting application
======================
* Fix for JMX collection view and paging (CC-394). Patch by Tim Shadel.
* Added web.xml parameter for cruisecontrol.jmxport, which can be overridden by the environment variable as documented in web.xml.

fittests.xsl
----------------------
* Display all fit results, not just the first one (CC-415). Patch by Randy Coulman.

CruiseControl Release Notes - 2.4.1

contrib
======================
* add option for XmlLoggerWithStatus to ignore certain targets (CC-259). Patch by Brad Clarke
* add cross-platform JavaServiceWrapper (CC-87). Submitted by Eric Pugh

build loop
======================

configxml.html:
----------------------
* Fix broken links to the puligin classes' javadoc
* cvs was renamed ConcurrentVersionsSystem

CruiseControlController:
----------------------
* Properly remove projects when appropriate on setConfigFile() (CC-408). Patch by Matt Albrecht

CruiseControlControllerJMXAdaptor:
----------------------
* Notify listeners on projects added/removed (CC-409). Patch by Matt Albrecht

ExecBuilder:
----------------------
* New plug-in for executing a specified command as the build action (CC-317). Submitted by Kevin Lee

HTMLEmailPublisher:
----------------------
* add option to pass XSLT parameters to the XSL stylesheets used.

JMX interface:
----------------------